# test_procomp

./: .gitignore  Makefile  manage.py  pyproject.toml
csv_parser/: asgi.py  settings.py  urls.py  wsgi.py
csv_parser/files/: apps.py  db_functions.py  models.py  parser.py  urls.py  views.py
csv_parser/files/migrations/: 0001_initial.py  0002_files_column_names_files_file_name.py  0003_remove_files_column_names_alter_files_file.py  0004_alter_files_file.py
csv_parser/templates/: base.html
csv_parser/templates/files/: delete.html  files_detail.html  frames.html  index.html  upload.html
