[tool.poetry]
name = "test-procomp"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-extensions = "^3.2.3"
ipython = "^8.16.1"
pandas = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
